--- a/backend/cart/src/main/resources/application.properties
+++ b/backend/cart/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=cart
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/quickshop
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=username
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+stripe.secret.key=sk_test_************
+stripe.success.url=http://localhost:5173/success
+stripe.cancel.url=http://localhost:5173/cancel
