--- a/backend/cart/src/main/resources/application.properties
+++ b/backend/cart/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=cart
+
+#MySql configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/quickshop
 spring.datasource.username=username
@@ -6,6 +8,8 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
-stripe.secret.key=sk_test_************
+#Stripe configuration
+stripe.secret.key=sk_test_*************
 stripe.success.url=http://localhost:5173/success
 stripe.cancel.url=http://localhost:5173/cancel
+
